# human-task-manager

./: CMakeLists.txt  README.md  SingletonUser.cpp  Task.cpp  Task.h  component.hpp  main.cpp  test.cpp
header/: Component.h  InitFactory.h  Task.h  TaskList.h  UserControl.h  component.hpp
source/: InitFactory.cpp  SingletonUser.cpp  Task.cpp  TaskList.cpp  TaskList.h  UserControl.cpp  main.cpp
